--- a/src/Weather.css
+++ b/src/Weather.css
@@ -2,8 +2,13 @@
   font-family: arial, sans-serif;
   border: 1px solid #dadde1;
   border-radius: 4px;
-  color: rgb(135, 135, 135);
+  color: rgb(95, 94, 94);
   padding: 16px;
+  background: linear-gradient(
+    178.6deg,
+    rgb(232, 245, 253) 3.3%,
+    rgb(252, 253, 255) 109.6%
+  );
 }
 
 .Weather h1 {
